Added support for implementing IChildEntity on the resource extension class, allowing the mapper to set the parent reference which is needed for unified key references on the extension class.
Updated approval tests.

--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Resources.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/Resources.mustache
@@ -272,7 +272,7 @@ namespace {{ResourceClassesNamespace}}
     {{#HasRequiredMembersWithMeaningfulDefaultValues}}
     [NoUnsuppliedRequiredMembersWithMeaningfulDefaults]
     {{/HasRequiredMembersWithMeaningfulDefaultValues}}
-    public {{#IsAbstract}}abstract {{/IsAbstract}}class {{ClassName}} : {{NamespacePrefix}}I{{EntityName}}{{DerivedName}}{{#IsAggregateRoot}}, IHasETag, IDateVersionedEntity{{/IsAggregateRoot}}{{#HasRequiredMembersWithMeaningfulDefaultValues}}, IHasRequiredMembersWithMeaningfulDefaultValues{{/HasRequiredMembersWithMeaningfulDefaultValues}}
+    public {{#IsAbstract}}abstract {{/IsAbstract}}class {{ClassName}} : {{NamespacePrefix}}I{{EntityName}}{{DerivedName}}{{#IsAggregateRoot}}, IHasETag, IDateVersionedEntity{{/IsAggregateRoot}}{{#HasRequiredMembersWithMeaningfulDefaultValues}}, IHasRequiredMembersWithMeaningfulDefaultValues{{/HasRequiredMembersWithMeaningfulDefaultValues}}{{#IsResourceExtensionClass}}, IChildEntity{{/IsResourceExtensionClass}}
     {
 #pragma warning disable 414
         private bool _SuspendReferenceAssignmentCheck = false;
@@ -1190,6 +1190,13 @@ namespace {{ResourceClassesNamespace}}
 
         {{/ResourceReferences}}
         // -----------------------------------------------------------------
+        {{#IsResourceExtensionClass}}
+
+        void IChildEntity.SetParent(object value)
+        {
+            {{ParentName}} = (I{{ParentName}})value;
+        }
+        {{/IsResourceExtensionClass}}
     }
     {{/ShouldRenderClass}}
 
